Bug 441925 - Okteta search behavior keeps selecting "selected bytes" when it's not wanted--doesn't remember settings
Summary: Okteta search behavior keeps selecting "selected bytes" when it's not wanted-...
Status: RESOLVED FIXED
Alias: None
Product: okteta
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.25.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Friedrich W. H. Kossebau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-02 21:24 UTC by alphaLimaTango
Modified: 2023-06-02 21:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.26.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description alphaLimaTango 2021-09-02 21:24:19 UTC
STEPS TO REPRODUCE
1. Open a file
2. Hit ctrl+f to search for bytes. Enter a valid value that exists in the file and hit enter
3. Hit ctrl+f again to search for different bytes

OBSERVED RESULT
"Selected bytes" is selected in the "Find Bytes" dialog. If you disable it, the next time you search and open it it'll be re-enabled

EXPECTED RESULT
The user setting for selecting/unselecting "selected bytes" is remembered.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Devuan testing
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Friedrich W. H. Kossebau 2023-06-02 21:03:04 UTC
Git commit 48e3f9820009abd7198653590a3787e21c45907c by Friedrich W. H. Kossebau.
Committed on 02/06/2023 at 19:29.
Pushed by kossebau into branch '0.26'.

Search/replace tools: disable automagic for "In selection" checkbox

Conditions used not the silver bullet behaviour after all.
FIXED-IN: 0.26.11

M  +3    -1    kasten/controllers/view/replace/replacedialog.cpp
M  +3    -1    kasten/controllers/view/search/searchdialog.cpp

https://invent.kde.org/utilities/okteta/-/commit/48e3f9820009abd7198653590a3787e21c45907c