Search/replace tools: disable automagic for "In selection" checkbox

Conditions used not the silver bullet behaviour after all.

BUG: 441925
FIXED-IN: 0.26.11